NetBSD Problem Report #42207

From yamt@NetBSD.org  Wed Oct 21 05:37:08 2009
Return-Path: <yamt@NetBSD.org>
Received: by www.NetBSD.org (Postfix, from userid 1270)
	id D296663B877; Wed, 21 Oct 2009 05:37:08 +0000 (UTC)
Message-Id: <20091021053708.D296663B877@www.NetBSD.org>
Date: Wed, 21 Oct 2009 05:37:08 +0000 (UTC)
From: yamt@netbsd.org
Reply-To: yamt@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: "eject cd0" takes too long (due to amd support?)
X-Send-Pr-Version: 3.95

>Number:         42207
>Category:       bin
>Synopsis:       "eject cd0" takes too long (due to amd support?)
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Oct 21 05:40:00 +0000 2009
>Closed-Date:    Sun Aug 14 19:32:03 +0000 2011
>Last-Modified:  Sun Aug 14 19:32:03 +0000 2011
>Originator:     YAMAMOTO Takashi
>Release:        NetBSD 5.99.20
>Organization:

>Environment:
	amd64
>Description:
	"eject cd0" takes too long. (it might be infinity.  i don't know.)
	SIGINFO shows it's sleeping with the "select" wmesg.
	the system doesn't have amd running.
	"eject -f cd0" works.
>How-To-Repeat:
>Fix:


>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42207 CVS commit: src/usr.bin/eject
Date: Fri, 26 Feb 2010 15:18:38 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Feb 26 20:18:37 UTC 2010

 Modified Files:
 	src/usr.bin/eject: am_glue.c

 Log Message:
 PR/42207: YAMAMOTO Takashi: If the portmapper (rpcbind) is not running, eject
 takes 2 minutes to timeout. Add a ping the portmapper function that times out
 after 5 seconds.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/usr.bin/eject/am_glue.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: YAMAMOTO Takashi <yamt@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42207 CVS commit: src/usr.bin/eject
Date: Wed, 23 Jun 2010 18:07:59 +0000

 Module Name:	src
 Committed By:	yamt
 Date:		Wed Jun 23 18:07:59 UTC 2010

 Modified Files:
 	src/usr.bin/eject: am_glue.c am_glue.h eject.c

 Log Message:
 don't bother to connect to amd unless necessary.  PR/42207


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/usr.bin/eject/am_glue.c
 cvs rdiff -u -r1.1 -r1.2 src/usr.bin/eject/am_glue.h
 cvs rdiff -u -r1.25 -r1.26 src/usr.bin/eject/eject.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 14 Aug 2011 19:32:03 +0000
State-Changed-Why:
yamt fixed it himself a year+ ago.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.