PR/42207: YAMAMOTO Takashi: If the portmapper (rpcbind) is not running, eject takes 2 minutes to timeout. Add a ping the portmapper function that times out after 5 seconds.